# jarvis-ai-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  ACCEPTANCE_CHECKLIST.md  ACCEPTANCE_CRITERIA.md  ACCEPTANCE_CRITERIA_VALIDATION.md  API_EXAMPLES.md  ARCHITECTURE.md  CHANGELOG.md  COMPLETION_CHECKLIST.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DASHBOARD_FEATURES.md  DEPLOYMENT_CHECKLIST.md  HOME_AUTOMATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INTEGRATION_GUIDE.md  LICENSE  Makefile  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  TASK_MANAGER_API.md  TESTING.md  TESTING_SUMMARY.md  TICKET_COMPLETION.md  UI_SUMMARY.md  WORKFLOWS.md  cli.py  cli_client.py  config.example.json  config.yaml  curl_examples.sh  demo.py  demo_home_automation.py  demo_multitasking.py  example_concurrent.py  example_usage.py  (+24 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
config/: n8n_config.example.json
docs/: INDEX.md  README.md  configuration.md  developer-guide.md  gui-usage.md  memory-internals.md  security.md  setup.md  skill-authoring.md
examples/: README.md  calculator_skill.py  news_skill.py  reminder_skill.py
home_automation/: __init__.py  base.py  config.py  mock_api.py  service.py
home_automation/adapters/: __init__.py  home_assistant.py  hue.py  tplink.py
scripts/: run_integrated.py  run_ui.py  setup.sh  test_ui.py
src/: background_actions.py  task_manager.py
src/jarvis/: __init__.py  jarvis.py  workflow_builder.py
src/jarvis/agents/: agent_manager.py  prompts.py
src/jarvis/config/: __init__.py  config_loader.py
src/jarvis/integrations/: __init__.py  n8n_client.py
src/jarvis/services/: __init__.py  azure_service.py  llm_service.py  local_service.py  openai_service.py
src/jarvis/skills/: __init__.py  base_skill.py  time_skill.py  weather_skill.py  wikipedia_skill.py  (+1 more)
tests/: conftest.py  mock_llm.py  test_agent_manager.py  test_background_actions.py  test_config.py  test_home_automation.py  test_integration.py  test_jarvis_integration.py  test_jarvis_unit.py  test_n8n_client.py  test_skills.py  test_task_manager.py  test_workflow_builder.py
ui/: README.md  __init__.py  dashboard.py  event_bus.py  mock_data.py
ui/qml/: ConversationPanel.qml  MemoryPanel.qml  MetricsPanel.qml  TaskPanel.qml  Theme.qml  WaveformPanel.qml  main.qml
(+2 files in other folders)
